deployments/configs/inji-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inji
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - DOMAIN
      secretName: DOMAIN-tls
  rules:
    - host: DOMAIN
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: inji-certify
                port:
                  number: 80
