deployments/configs/inji-verify-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inji-verify
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - DOMAIN
      secretName: DOMAIN-tls
  rules:
    - host: DOMAIN
      http:
        paths:
          - backend:
              service:
                name: injiverify
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
